<resources>
    <string name="app_name">activity Event kelas B</string>
    <string name="edEmail">Email</string>
    <string name="edPassword">Password</string>
    <string name="btSignIn">Sign-In</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="txemail">Ini hasil email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label2">Logil Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erpass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    
</resources>