<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ldaftar"
        android:textSize="15pt"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/qnama"
        android:layout_width="431dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enama"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="180dp" />

    <EditText
        android:id="@+id/qalamat"
        android:layout_width="411dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ealamat"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="249dp" />

    <EditText
        android:id="@+id/qtemail"
        android:layout_width="405dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edEmail"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="315dp" />

    <EditText
        android:id="@+id/qpassword"
        android:layout_width="414dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/epass"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="386dp" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="421dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/erpass"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="478dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="121dp"
        android:layout_height="99dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="277dp"
        tools:layout_editor_absoluteY="625dp" />
</androidx.constraintlayout.widget.ConstraintLayout>