<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:hint="@string/edEmail"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:hint="@string/edPassword"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#00773F"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btSignIn"
        android:textColor="#ffffff" />
</LinearonstraintLayout>