<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constrainedHeight="true">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="308dp"
        android:layout_height="100dp"
        android:layout_marginTop="76dp"
        android:text="@string/detailkontak"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="96dp" />

    <TextView
        android:id="@+id/tvnama"
        android:layout_width="158dp"
        android:layout_height="84dp"
        android:text="@string/nama"
        android:textSize="11pt"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama"
        android:textSize="11pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/tvnohp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notel"
        android:textSize="11pt"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="280dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nomor Telpon"
        android:textSize="11pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="237dp" />
</androidx.constraintlayout.widget.ConstraintLayout>